<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/edge_margin" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/edge_margin" />

        <View
                android:id="@+id/profile_edit_top_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_bar_height"
                android:background="@color/purple_800"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
                android:id="@+id/profile_edit_close_button"
                android:layout_width="@dimen/image_button_small_size"
                android:layout_height="@dimen/image_button_small_size"
                android:src="@drawable/ic_close"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/profile_edit_top_bar"
                android:contentDescription="@string/cancel_changes" />

        <ImageButton
                android:id="@+id/profile_edit_save_button"
                android:layout_width="@dimen/image_button_small_size"
                android:layout_height="@dimen/image_button_small_size"
                android:layout_marginEnd="@dimen/components_medium_margin"
                android:src="@drawable/ic_save"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toStartOf="@+id/profile_edit_close_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/profile_edit_top_bar"
                android:contentDescription="@string/save_changes" />

        <ImageView
                android:id="@+id/profile_edit_image"
                android:layout_width="@dimen/profile_photo_large_size"
                android:layout_height="@dimen/profile_photo_large_size"
                android:layout_marginTop="@dimen/components_medium_margin"
                app:clipToOutline="@{true}"
                app:layout_constraintTop_toBottomOf="@+id/profile_edit_top_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/placeholder_profile_photo"
                android:contentDescription="@string/profile_image" />

        <ImageView
                android:id="@+id/profile_edit_fogging_image"
                android:layout_width="@dimen/profile_photo_large_size"
                android:layout_height="@dimen/profile_photo_large_size"
                android:src="@color/fogging"
                app:layout_constraintStart_toStartOf="@+id/profile_edit_image"
                app:layout_constraintTop_toTopOf="@+id/profile_edit_image"
                tools:src="@drawable/placeholder_profile_photo_fogging"
                tools:ignore="ContentDescription" />

        <ImageButton
                android:id="@+id/profile_edit_button"
                android:layout_width="@dimen/image_button_large_size"
                android:layout_height="@dimen/image_button_large_size"
                android:src="@drawable/ic_edit"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@+id/profile_edit_image"
                app:layout_constraintStart_toStartOf="@+id/profile_edit_image"
                app:layout_constraintTop_toTopOf="@+id/profile_edit_image"
                app:layout_constraintBottom_toBottomOf="@+id/profile_edit_image"
                android:contentDescription="@string/edit_profile_image" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_edit_nickname_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/components_medium_margin"
                android:hint="@string/nickname"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/profile_edit_image"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_edit_nickname_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    tools:text="Никнейм пользователя" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_edit_email_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/components_small_margin"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/profile_edit_nickname_input_layout"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_edit_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    tools:text="example@google.com" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_edit_about_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/components_small_margin"
                android:hint="@string/about_me"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/profile_edit_email_input_layout"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_edit_about_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="4"
                    tools:text="Информация о себе" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
