<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/edge_margin" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/edge_margin" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/edge_margin" />

    <androidx.cardview.widget.CardView
            android:id="@+id/login_app_icon_card"
            android:layout_width="@dimen/large_icon_card_size"
            android:layout_height="@dimen/large_icon_card_size"
            android:layout_marginTop="@dimen/large_app_icon_margin"
            app:cardCornerRadius="@dimen/card_corner_large_radius"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/login_app_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center"
                android:src="@drawable/ic_app_icon"
                app:tint="?attr/colorPrimaryVariant"
                tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:id="@+id/login_data_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/login_login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_app_icon_card"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline" >

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_username_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:layout_constraintTop_toBottomOf="@+id/login_app_icon_card"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintBottom_toTopOf="@+id/login_login_button">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    tools:text="login" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/components_medium_margin"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    tools:text="password" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/login_login_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_button_margin"
            android:layout_marginEnd="@dimen/large_button_margin"
            android:layout_marginBottom="@dimen/components_small_margin"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/login_register_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/login_register_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_button_margin"
            android:layout_marginEnd="@dimen/large_button_margin"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>