<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModule"
                type="com.team.seven.gocomix.ui.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/edge_margin" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/edge_margin" />

        <View
                android:id="@+id/profile_top_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_bar_height"
                android:background="@color/purple_800"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
                android:id="@+id/profile_logout_button"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:src="@drawable/ic_logout"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/logout"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/profile_top_bar" />

        <ImageButton
                android:id="@+id/profile_edit_button"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_marginEnd="@dimen/components_medium_margin"
                android:src="@drawable/ic_edit"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit_profile"
                app:layout_constraintEnd_toStartOf="@+id/profile_logout_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/profile_top_bar" />

        <ImageView
                android:id="@+id/profile_large_image"
                android:layout_width="@dimen/profile_photo_large_size"
                android:layout_height="@dimen/profile_photo_large_size"
                android:layout_marginTop="@dimen/components_medium_margin"
                android:contentDescription="@string/profile_image"
                app:clipToOutline="@{true}"
                app:layout_constraintTop_toBottomOf="@+id/profile_top_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/placeholder_profile_photo" />

        <TextView
                android:id="@+id/profile_username_text"
                style="@style/Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/components_medium_margin"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/profile_large_image"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                tools:text="Никнейм автора" />

        <TextView
                android:id="@+id/profile_email_text"
                style="@style/Subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/components_small_margin"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/profile_username_text"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                tools:text="example@google.com" />

        <TextView
                android:id="@+id/profile_userinfo_text"
                style="@style/Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/components_small_margin"
                android:gravity="center"
                android:maxLines="4"
                app:layout_constraintTop_toBottomOf="@+id/profile_email_text"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                tools:text="Информация о себе" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
